# redmond-mush

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.env.example  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: redmond.env.example
data/: README.md
data/rules/: weapons.example.yaml
docs/: text-formatting.md
scripts/: CONTRIBUTING.md  README.md  account_create.sh  account_set_admin.sh  account_set_password.sh  accounts_list.sh  backup_create.sh  backup_list.sh  backup_local.sh  backup_status.sh  common.sh  container_start.sh  init_local.sh  reset_local.sh  restore_local.sh  status_local.sh  test_compose.sh  test_fast.sh  test_full.sh
src/redmond_server/: __init__.py
src/redmond_server/bootstrap/: __init__.py  __main__.py  _accounts.py  _backup.py  _backup_contract.py  _cli.py  _env.py  _passwords.py  _runtime.py  _types.py  _world.py
src/redmond_server/game/: .gitignore  __init__.py
src/redmond_server/game/commands/: __init__.py  command.py  default_cmdsets.py  prompt.py
src/redmond_server/game/server/: __init__.py
src/redmond_server/game/server/conf/: __init__.py  _backup.py  _database.py  _runtime_env.py  at_initial_setup.py  at_search.py  cmdparser.py  connection_screens.py  inlinefuncs.py  inputfuncs.py  lockfuncs.py  mssp.py  (+5 more)
src/redmond_server/game/typeclasses/: __init__.py  accounts.py  channels.py  characters.py  exits.py  objects.py  rooms.py  scripts.py
src/redmond_server/game/web/: __init__.py  urls.py
src/redmond_server/game/world/: __init__.py  game_text.py  help_entries.py  prompts.py  prototypes.py
tests/: __init__.py  bootstrap_test_utils.py  test_bootstrap_fast.py  test_bootstrap_integration.py  test_compose_contract.py  test_connection_screens.py  test_postgresql_backup_fast.py  test_prompts.py  test_public_docs_contract.py  test_shell_wrappers_fast.py  test_smoke.py  test_wrapper_config_integration.py
(+19 files in other folders)
