[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redmond-mush"
version = "0.1.0"
description = "MIT-licensed MUSH server framework for roleplay servers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "evennia>=6,<7",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
