[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redmond-mush"
version = "0.1.2"
description = "MIT-licensed MUSH server framework for roleplay servers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "evennia>=6,<7",
  "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
redmond_server = ["game/server/conf/title_cards/*.txt"]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
  "django.*",
  "evennia.*",
  "commands.*",
  "server.*",
  "typeclasses.*",
  "world.*",
]
ignore_missing_imports = true
